# hexlet-my-first-workflow

./: pyproject.toml
.github/workflows/: say-hello.yml
hello3/scripts/: say_hello.py
